# fugue

./: .gitignore  AGENTS.md  Cargo.toml  DEMO-MULTI-AGENT.md  DEMO-QA.md  DEMO.md  LICENSE.md  Makefile  QA-CHECKLIST.md  README.md  SESSION.md  SESSION_PROMPT.md  WAVES.md
.ccmux/: settings.default.json
.claude/skills/: orchestrate.md
ccmux-client/: Cargo.toml
ccmux-client/src/: auto_start.rs  cli.rs  config.rs  connection.rs  main.rs
ccmux-client/src/connection/: client.rs  handler.rs
ccmux-client/src/input/: commands.rs  keys.rs  mod.rs  mouse.rs
ccmux-client/src/ui/: app.rs  borders.rs  event.rs  layout.rs  mod.rs  pane.rs  render.rs  resize.rs  state.rs  status.rs  terminal.rs
ccmux-compat/: Cargo.toml
ccmux-compat/src/: cli.rs  client.rs  main.rs
ccmux-compat/src/commands/: mod.rs  session.rs  window.rs
ccmux-protocol/src/: codec.rs  lib.rs  messages.rs  types.rs
ccmux-protocol/src/types/: agent.rs  pane.rs  window.rs
ccmux-sandbox/: Cargo.toml
ccmux-server/: Cargo.toml
ccmux-server/src/: beads.rs  claude.rs  isolation.rs  main.rs  registry.rs  reply.rs  tcp.rs  user_priority.rs  watchdog.rs
ccmux-server/src/agents/: mod.rs
ccmux-server/src/agents/claude/: mod.rs
ccmux-server/src/agents/gemini/: mod.rs
ccmux-server/src/claude/: detector.rs  mod.rs
ccmux-server/src/config/: loader.rs  schema.rs
ccmux-server/src/handlers/: connection.rs  input.rs  mcp_bridge.rs  mod.rs  orchestration.rs  pane.rs  session.rs
ccmux-server/src/handlers/mcp_bridge/: layout_tools.rs  mod.rs  pane.rs  pane_tools.rs  session_tools.rs  window_tools.rs
ccmux-server/src/mcp/: bridge.rs  error.rs  handlers.rs  mod.rs  protocol.rs  server.rs  tools.rs
ccmux-server/src/mcp/bridge/: connection.rs  handlers.rs  mod.rs  orchestration.rs  tests.rs
ccmux-server/src/observability/: http.rs  metrics.rs  mod.rs
ccmux-server/src/orchestration/: mod.rs  router.rs  worktree.rs
ccmux-server/src/persistence/: checkpoint.rs  mod.rs  recovery.rs  replay.rs  restoration.rs  scrollback.rs  types.rs  wal.rs
ccmux-server/src/pty/: buffer.rs  config.rs  handle.rs  manager.rs  mod.rs  output.rs
ccmux-server/src/session/: manager.rs  mod.rs  pane.rs  session.rs  window.rs
ccmux-server/src/sideband/: async_executor.rs  commands.rs  executor.rs  mod.rs  parser.rs
ccmux-utils/: Cargo.toml
ccmux-utils/src/: error.rs  lib.rs  logging.rs  paths.rs  session_logging.rs
docs/: AGENT_COOPERATION.md  ARCHITECTURE.md  CONTEXT_ENGINEERING_METHODOLOGY.md  DEEP_RESEARCH_PROMPT.md  FEATURE_HANDOFF.md  HANDOFF.md  HANDOFF_NEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  REMOTE_ACCESS.md  TAGS.md  TROUBLESHOOTING.md  WATCHDOG_MONITOR.md  gastown-integration-analysis.md
docs/adr/: ADR-001-dumb-pipe-strategy.md
docs/architecture/: ARCHITECTURE.md  CAPABILITIES.md  CLAUDE_INTEGRATION.md  CONFIGURATION.md  CRATE_STRUCTURE.md  GASTOWN_REMOTE_SUPPORT.md  MCP_WORKER_MODE.md  OBSERVABILITY.md  PERSISTENCE.md  REMOTE_PEERING.md  VISIBILITY_DASHBOARD.md
docs/architecture/ADR/: 001-terminal-parser.md  002-claude-communication.md  003-session-isolation.md  004-client-consistency-model.md  005-event-sequencing-resync.md
docs/design/: DESIGN_PRINCIPLES.md  INVARIANTS.md  MAIL_STORAGE.md  WHY_FUGUE.md  control_plane.md
docs/research/: SYNTHESIS.md  claude_research.md  gemini_research.md
docs/research/parsed/: PARSING_SUMMARY.md  chatgpt_abstracts.md  chatgpt_metadata.json  chatgpt_section_map.md  chatgpt_structure.json  claude_abstracts.md  claude_metadata.json  claude_section_map.md  claude_structure.json  gemini_abstracts.md  gemini_metadata.json  (+2 more)
feature-management/: .agent-config.json  DEPLOYMENT_PLAN.md  README.md  RETROSPECTIVE_2026_01_14.md  RETROSPECTIVE_2026_01_17.md
feature-management/bugs/: bugs.md
feature-management/docs/: WORK-ITEM-TYPES.md
feature-management/features/: features.md
feature-management/inquiries/: inquiries.md
feature-management/schemas/: bug-report.schema.json  feature-request.schema.json  inquiry-report.schema.json
fugue-client/: Cargo.toml
fugue-client/src/: auto_start.rs  cli.rs  commands.rs  config.rs  connection.rs  main.rs
fugue-compat/: Cargo.toml
fugue-compat/src/: cli.rs  client.rs  main.rs
fugue-compat/src/commands/: mod.rs  pane.rs  session.rs  window.rs
fugue-protocol/: Cargo.toml
fugue-protocol/src/: codec.rs  lib.rs  messages.rs
fugue-protocol/src/types/: agent.rs  common.rs  mod.rs  pane.rs  session.rs  widget.rs
fugue-sandbox/: Cargo.toml
fugue-sandbox/src/: main.rs
fugue-server/: Cargo.toml
fugue-server/src/: arbitration.rs  beads.rs  isolation.rs  main.rs  parser.rs  registry.rs  reply.rs  tcp.rs  watchdog.rs
fugue-server/src/agents/: mod.rs
fugue-server/src/agents/claude/: mod.rs
fugue-server/src/agents/codex/: mod.rs
fugue-server/src/agents/gemini/: mod.rs
fugue-server/src/claude/: command.rs  detector.rs  mod.rs  state.rs
fugue-server/src/config/: defaults.rs  loader.rs  mod.rs  schema.rs  watcher.rs
fugue-server/src/handlers/: connection.rs  input.rs  mod.rs  orchestration.rs  pane.rs  session.rs
fugue-server/src/handlers/mcp_bridge/: environment.rs  io.rs  layout.rs  metadata.rs  pane.rs  session.rs  tests.rs  window.rs
fugue-server/src/mcp/: error.rs  handlers.rs  keys.rs  mod.rs  protocol.rs  server.rs  tools.rs
fugue-server/src/mcp/bridge/: connection.rs  handlers.rs  health.rs  mail.rs  mod.rs  orchestration.rs  orchestration_context.rs  tests.rs
fugue-server/src/observability/: http.rs  metrics.rs  mod.rs
fugue-server/src/orchestration/: router.rs  worktree.rs
fugue-server/src/persistence/: checkpoint.rs  mod.rs  recovery.rs  replay.rs  restoration.rs  scrollback.rs  types.rs  wal.rs
fugue-server/src/pty/: buffer.rs  config.rs  handle.rs  manager.rs  mod.rs  output.rs
fugue-server/src/session/: manager.rs  mirror.rs  mod.rs  pane.rs  session.rs  window.rs
fugue-server/src/sideband/: async_executor.rs  commands.rs  executor.rs  mod.rs  parser.rs
fugue-utils/: Cargo.toml
fugue-utils/src/: error.rs  lib.rs  logging.rs  paths.rs  session_logging.rs
src/: main.rs
(+711 files in other folders)
