[workspace]
resolver = "2"
members = [
    "fugue-client",
    "fugue-compat",
    "fugue-server",
    "fugue-protocol",
    "fugue-utils",
    "fugue-sandbox",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/brendanbecker/fugue"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IPC codec
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

# XDG paths
directories = "5"

# System calls (for getuid)
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true
