[package]
name = "ccmux-client"
description = "Terminal UI client for ccmux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ccmux"
path = "src/main.rs"

[dependencies]
ccmux-protocol = { path = "../ccmux-protocol" }
ccmux-utils = { path = "../ccmux-utils" }

# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-term = "0.2"

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# IDs
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
