[package]
name = "ccmux-server"
description = "Background daemon for ccmux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ccmux-server"
path = "src/main.rs"

[dependencies]
ccmux-protocol = { path = "../ccmux-protocol" }
ccmux-utils = { path = "../ccmux-utils" }

# PTY management
portable-pty = "0.9"
parking_lot = "0.12"

# Terminal parsing
vt100 = "0.15"

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }

# Configuration
notify = "6"
notify-debouncer-full = "0.3"
arc-swap = "1"
toml = "0.8"

# Persistence
okaywal = "0.3"
lz4_flex = "0.11"
zstd = "0.13"
dirs = "5"

# Logging
tracing = { workspace = true }

[features]
default = []
mcp = ["rmcp"]

[dependencies.rmcp]
version = "0.1"
optional = true

[dev-dependencies]
tempfile = "3"
