[package]
name = "fugue-compat"
description = "tmux-compatible CLI wrapper for fugue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fugue-compat"
path = "src/main.rs"

[dependencies]
fugue-protocol = { path = "../fugue-protocol" }
fugue-utils = { path = "../fugue-utils" }

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# URL parsing
url = "2"

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
