[package]
name = "fugue-protocol"
description = "Shared IPC definitions for fugue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
