[package]
name = "fugue-server"
description = "Background daemon for fugue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fugue-server"
path = "src/main.rs"

[dependencies]
fugue-protocol = { path = "../fugue-protocol" }
fugue-utils = { path = "../fugue-utils" }

# PTY management
portable-pty = "0.9"
parking_lot = "0.12"

# Terminal parsing
vt100 = "0.15"
regex = "1"
strip-ansi-escapes = "0.2"
lazy_static = "1.4"
thiserror = "1"

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3"

# Concurrent data structures
dashmap = "5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
bincode = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
notify = "6"
notify-debouncer-full = "0.3"
arc-swap = "1"
toml = "0.8"

# Persistence
okaywal = "0.3"
lz4_flex = "0.11"
zstd = "0.13"
dirs = "5"

# Logging
tracing = { workspace = true }

# HTTP metrics endpoint (FEAT-074)
hyper = { version = "1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
fastrand = "2.3.0"

[features]
default = []

[dev-dependencies]
tempfile = "3"
bytes = { workspace = true }
