[package]
name = "fugue-utils"
description = "Common utilities for fugue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = "1"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
